# TermOxide

./: .gitattributes  Cargo.toml  LICENSE  cargo.toml
.github/actions/rust-cache/: action.yml
.github/workflows/: build.yaml  bump.yaml  crates-builder.yaml  crates-bumper.yaml  crates-detector.yaml  pr.yaml  publish.yaml  release.yaml  test_build.yaml
.github/workflows/old/: matrix.yaml  release.yaml
.github/workflows/sub/: crates-builder-internal.yaml  crates-builder.yaml  crates-bumper.yaml  crates-detector.yaml
crates/cargo-bump/: Cargo.toml
crates/cargo-bump/src/: main.rs
crates/cargo-extract/: Cargo.toml
crates/ci-impact/: Cargo.toml
crates/ci-impact/src/: main.rs
crates/oxidui_macros/: Cargo.toml
crates/oxidui_style/: Cargo.toml
crates/oxidui_style/src/: border.rs  color.rs  font.rs  layout.rs  lib.rs  number.rs  str.rs  unit.rs
crates/termoxide_layout/: Cargo.toml
crates/termoxide_layout/src/: border.rs  color.rs  coord_mapper.rs  font.rs  layout_engine.rs  lib.rs  number.rs  str.rs  style_macro.rs  stylesheet.rs  unit.rs
crates/termoxide_macros/: Cargo.toml
crates/termoxide_macros/src/: lib.rs
crates/termoxide_reactive/: Cargo.toml
crates/termoxide_reactive/src/: effect.rs  lib.rs  memo.rs  resource.rs  runtime.rs  signal.rs  trigger.rs
crates/termoxide_reactive/tests/: advanced_integration.rs  effect_integration.rs  trigger_integration.rs
